# CalculatorProject

./: CMakeLists.txt  LICENSE  README.md  build_and_run.sh
include/: Calculator.h
src/: Calculator.cpp  Main.cpp
tests/: test_Calculator.cpp
